kubernetes/strategies/canary/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-monolith-stable-service
  namespace: default
  labels:
    app: nodejs-monolith
    track: stable
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: nodejs-monolith
    track: stable
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-monolith-canary-service
  namespace: default
  labels:
    app: nodejs-monolith
    track: canary
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: nodejs-monolith
    track: canary
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-monolith-main-service
  namespace: default
  labels:
    app: nodejs-monolith
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: nodejs-monolith # Matches both stable and canary pods for basic Kubernetes pod ratio load balancing
